soprano (2.3.0+dfsg.1-2) UNRELEASED; urgency=low

  * Add patch to fix SopranoAddOntology.cmake path.

 -- Fathi Boudra <fabo@debian.org>  Wed, 22 Jul 2009 19:12:22 +0200

soprano (2.3.0+dfsg.1-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Fathi Boudra:

  * Set priority extra to debug package.
  * Bump Standards-Version from 3.8.0 to 3.8.2 (no changes needed).

  +++ Changes by Modestas Vainius:

  * Convert symbols file to dpkg-dev 1.15.3 compatible format. Build depend on
    dpkg-dev 1.15.3.
  * Update symbols file for 2.3.0 release.

  +++ Changes by Scott Kitterman:

  * Split out non library files split into soprano-daemon. (Closes: #517475)

  +++ Changes by Sune Vuorela:

  * Fix sections.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 18 Jul 2009 12:34:23 +0300

soprano (2.2.69+dfsg.1-1) experimental; urgency=low

  * New upstream snapshot.

  +++ Changes by George Kiagiadakis:

  * Update installed files.
  * Update libsoprano4.symbols.in.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 29 Jun 2009 14:28:35 +0300

soprano (2.2.2+dfsg.1-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Modestas Vainius:

  * Point Debian Vcs URLs to pkg-kde/trunk (new location).

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * API documentation is now built enabling flag SOPRANO_BUILD_API_DOCS.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 27 Feb 2009 23:28:35 +0100

soprano (2.2.1+dfsg.1-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Modestas Vainius:

  * Remove THIS_SHOULD_GO_TO_UNSTABLE from debian/rules.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Remove 03_fix_soprano_exports.diff merged upstream.
  * Update debian/libsoprano4.symbols.in.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 19 Feb 2009 02:16:37 +0100

soprano (2.1.67+dfsg.1-2) experimental; urgency=low
